--- a/tests/folium_map.ipynb
+++ b/tests/folium_map.ipynb
@@ -1,36 +1,20 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "import folium"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "ZixSyeAlpMBi"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import folium\n",
+        "from ipywidgets import interact"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "basemap = folium.Map(location=(40.0297429,-3.6853168), zoom_start=6)\n",
-        "basemap"
-      ],
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -39,14 +23,9 @@
         "id": "CXzbjSBXpQnA",
         "outputId": "7f477777-e0e0-4d65-87a9-3d4a65af4a06"
       },
-      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "<folium.folium.Map at 0x7d2cb16ee4a0>"
-            ],
             "text/html": [
               "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
               "&lt;html&gt;\n",
@@ -117,34 +96,117 @@
               "        \n",
               "&lt;/script&gt;\n",
               "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
+            ],
+            "text/plain": [
+              "<folium.folium.Map at 0x7d2cb16ee4a0>"
             ]
           },
+          "execution_count": 27,
           "metadata": {},
-          "execution_count": 27
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "basemap = folium.Map(location=(40.0297429,-3.6853168), zoom_start=6)\n",
+        "basemap"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Save map, we can open this html in another tab\n",
-        "# and have it work the same as the ipynb output above\n",
-        "basemap.save('basemap.html')"
-      ],
+      "execution_count": 7,
       "metadata": {
         "id": "LL-faokIpRrQ"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Save map, we can open this html in another tab\n",
+        "# and have it work the same as the ipynb output above\n",
+        "#basemap.save('basemap.html')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": 1,
       "metadata": {
         "id": "m6EsvNGTpsFU"
       },
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "6ebaedcae3be484aae11b7bcc19cce94",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "interactive(children=(Dropdown(description='command', options=('zoom in', 'zoom out'), value='zoom in'), Outpu…"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "text/plain": [
+              "<function __main__.update_map(command)>"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Function to create and display a map\n",
+        "def display_map(latitude=52.3676, longitude=4.9041, zoom_start=12):\n",
+        "    m = folium.Map(location=[latitude, longitude], zoom_start=zoom_start)\n",
+        "    display(m)\n",
+        "\n",
+        "# Function to update map zoom\n",
+        "def update_map(command):\n",
+        "    zoom_change = 1  # How much to zoom in or out\n",
+        "    global zoom_level\n",
+        "    \n",
+        "    if command == 'zoom in':\n",
+        "        zoom_level += zoom_change\n",
+        "    elif command == 'zoom out':\n",
+        "        zoom_level -= zoom_change\n",
+        "    \n",
+        "    display_map(zoom_start=zoom_level)\n",
+        "\n",
+        "zoom_level = 10  # Initial zoom level\n",
+        "interact(update_map, command=['zoom in', 'zoom out'])"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
-      "outputs": []
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.18"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
